# uma-mobile

./: BUILD_INSTRUCTIONS.md  FINAL_STEPS.md  GITHUB_AUTH_GUIDE.md  GUIDE.md  MANUAL_UPLOAD_GUIDE.md  README.md  app.py  buildozer.spec  main.py  push_to_github.bat  pyproject.toml  requirements.txt  setup.py
